--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "𝚜𝚘𝚞𝚛𝚜 𝚊𝚏𝚛𝚘𝚝𝚘𝚘 ",
+    "name": "SOURS SIMA ",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://telegra.ph/file/04b2f1f1c808dc49db35b.jpg",
+    "logo": "https://telegra.ph//file/4de92822c3b4873db9572.jpg",
     "keywords": [
     "python3",
     "telegram",
